Link from index to fari.html
Should make the page load even from the link at
https://github.com/cdlm/fari.sh/settings

--- a/fari.html
+++ b/fari.html
@@ -82,7 +82,7 @@ defaults to <code>70</code>.</p>
 <h2 id="license">License</h2>
 <p>The <a href="https://github.com/cdlm/fari.sh">Fari source</a> is available on Github, and is released under the
 <a href="http://opensource.org/licenses/MIT">MIT license</a>. See the <a href="http://ashkenas.com/docco">Docco</a> generated docs for more information:
-<a href="https://cdlm.github.io/fari.sh/fari.html">https://cdlm.github.io/fari.sh/fari.html</a></p>
+<a href="https://cdlm.github.io/fari.sh">https://cdlm.github.io/fari.sh</a></p>
 
             </div>
             
